# Platform

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  BuildConsole.py  CMakeLists.txt  Licence.md  ReadMe.md  Setup.py  shadertoolsconfig.json  version.properties
Applications/GuiSample/: CMakeLists.txt  GuiSample.cpp
Applications/Sample/: CMakeLists.txt  Sample.cpp
Applications/Sfx/: CMakeLists.txt  Compiler.cpp  Compiler.h  Environ.h  FileLoader.cpp  FileLoader.h  Function.cpp  Function.h  Main.cpp  Preprocessor.h  Preprocessor.lpp  Preprocessor.ypp  Psfx.vcxproj.filters  Sfx.cpp  Sfx.h  Sfx.lpp  Sfx.ypp  SfxClasses.h  SfxEffect.cpp  SfxEffect.h  SfxErrorCheck.h  SfxParser.h  SfxProgram.cpp  SfxProgram.h  ShaderInstance.cpp  ShaderInstance.h  StringFunctions.cpp  StringFunctions.h  StringToWString.cpp  VisualStudioDebugOutput.h  json.hpp
Applications/Test/: CMakeLists.txt  Test.cpp
CrossPlatform/: AccelerationStructure.cpp  AccelerationStructure.h  AccelerationStructureManager.cpp  AccelerationStructureManager.h  Allocator.cpp  Allocator.h  AmortizationStruct.cpp  AmortizationStruct.h  AxesStandard.cpp  AxesStandard.h  BaseAccelerationStructure.cpp  BaseAccelerationStructure.h  BaseFramebuffer.cpp  BaseFramebuffer.h  BaseRenderer.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraInterface.h  CommandLineParams.cpp  CommandLineParams.h  CrossPlatform_NX.vcxproj  CrossPlatform_NX.vcxproj.filters  CrossPlatform_PS4.vcxproj  CrossPlatform_PS4.vcxproj.filters  CrossPlatform_XboxOne.vcxproj  CrossPlatform_XboxOne.vcxproj.filters  CrossPlatform_x64_v140.vcxproj  DemoOverlay.cpp  DemoOverlay.h  DeviceContext.cpp  DeviceContext.h  DisplaySurface.cpp  DisplaySurface.h  DisplaySurfaceManager.cpp  DisplaySurfaceManager.h  (+73 more)
CrossPlatform/SFX/: atmospherics.sfx  cloud_edit.sfx  clouds.sfx  gaussian.sfx  light_probes.sfx  lightning.sfx  simul_gpu_sky.sfx  sky.sfx  solid.sfx  sphere.sfx  terrain.sfx  test.sfx  water.sfx
CrossPlatform/SL/: atmospherics.sl  atmospherics_constants.sl  camera_constants.sl  cloud_shadow.sl  clouds_precise.sl  clouds_simple.sl  composite.sl  debug_constants.sl  gpu_cloud_constants.sl  gpu_sky_constants.sl  hdr_constants.sl  illumination.sl  lightning_constants.sl  mixed_resolution.sl  mixed_resolution_constants.sl  noise_constants.sl  nv_multi_res.sl  nv_multi_res_constants.sl  raytrace_new.sl  render_states.sl  simul_2d_cloud_constants.sl  simul_clouds.sl  simul_gpu_sky.sl  simul_inscatter_fns.sl  sky.sl  sphere_constants.sl
CrossPlatform/Shaders/: CppSl.sl  camera_constants.sl  (+30 more)
DirectX11/: Buffer.cpp  Buffer.h  CMakeLists.txt  CompileShaderDX1x.cpp  CompileShaderDX1x.h  ConstantBuffer.cpp  ConstantBuffer.h  CreateEffectDX1x.cpp  CreateEffectDX1x.h  DX11Exception.cpp  DX11Exception.h  DeviceManager.cpp  DeviceManager.h  Direct3D11CallbackInterface.h  Direct3D11Manager.cpp  Direct3D11Manager.h  Direct3D11ManagerInterface.h  DirectX11.rc  DirectX11_XboxOne.vcxproj  DirectX11_XboxOne.vcxproj.filters  DirectX11_x64_v140.vcxproj  DirectX11_x64_v140.vcxproj.filters  DirectXHeader.h  DisplaySurface.cpp  DisplaySurface.h  ESRAMManager.cpp  ESRAMManager.h  ESRAMTexture.cpp  ESRAMTexture.h  Effect.cpp  Effect.h  EffectLegacy.cpp  Export.h  FramebufferDX1x.cpp  FramebufferDX1x.h  Layout.cpp  Layout.h  Light.cpp  Light.h  MacrosDx1x.h  (+14 more)
DirectX12/: AccelerationStructure.cpp  AccelerationStructure.h  BaseAccelerationStructure.cpp  BaseAccelerationStructure.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandListController.cpp  CommandListController.h  ConstantBuffer.cpp  DXSampleHelper.h  DeviceManager.cpp  DeviceManager.h  Direct3D12CallbackInterface.h  Direct3D12Manager.cpp  Direct3D12Manager.h  DirectX12_XboxOne.vcxproj  DirectX12_XboxOne.vcxproj.filters  DirectX12_x64_v140.vcxproj  DirectX12_x64_v140.vcxproj.filters  DirectXRaytracingHelper.h  DisplaySurface.cpp  DisplaySurface.h  Effect.cpp  Export.h  Framebuffer.cpp  Framebuffer.h  FramebufferDX1x.cpp  FramebufferDX1x.h  GpuProfiler.cpp  GpuProfiler.h  Heap.cpp  Heap.h  Layout.cpp  Layout.h  PlatformStructuredBuffer.cpp  PlatformStructuredBuffer.h  Query.cpp  (+20 more)
Docs/: CMakeLists.txt  Doxyfile.in  conf.py  core.rst  crossplatform.rst  index.rst  math.rst  requirements.txt
GLES/: Buffer.cpp  Buffer.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DisplaySurface.cpp  DisplaySurface.h  Effect.cpp  Effect.h  Export.h  FramebufferGL.cpp  FramebufferGL.h  Layout.cpp  Layout.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OpenGLCallbackInterface.h  Profiler.cpp  Profiler.h  RenderPlatform.cpp  RenderPlatform.h  Texture.cpp  Texture.h
ImGui/: CMakeLists.txt  Export.h  imgui_impl_platform.cpp  imgui_impl_platform.h  imgui_impl_win32.cpp  imgui_impl_win32.h
OpenGL/: Buffer.cpp  Buffer.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DisplaySurface.cpp  DisplaySurface.h  Effect.cpp  Effect.h  Export.h  Framebuffer.cpp  Framebuffer.h  FramebufferGL.cpp  FramebufferGL.h  Layout.cpp  Layout.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  OpenGLCallbackInterface.h  OpenGL_x64_v140.vcxproj  OpenGL_x64_v140.vcxproj.filters  Profiler.cpp  Profiler.h  RenderPlatform.cpp  RenderPlatform.h  Sfx.props  Texture.cpp  Texture.h  glad.c
Vulkan/: Allocation.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  Buffer.cpp  Buffer.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  DisplaySurface.cpp  DisplaySurface.h  Effect.cpp  Effect.h  EffectPass.cpp  EffectPass.h  Export.h  Framebuffer.cpp  Framebuffer.h  Layout.cpp  Layout.h  PlatformConstantBuffer.cpp  PlatformConstantBuffer.h  PlatformStructuredBuffer.cpp  PlatformStructuredBuffer.h  RenderPlatform.cpp  RenderPlatform.h  Sfx.props  Shader.cpp  Shader.h  ShaderBindingTable.cpp  ShaderBindingTable.h  Texture.cpp  Texture.h  TopLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.h  VideoDecoder.cpp  VideoDecoder.h  Vulkan_x64_v140.vcxproj  Vulkan_x64_v140.vcxproj.filters
(+1195 files in other folders)
