cmake_minimum_required(VERSION 2.9)

file(GLOB SOURCES "*.cpp" )

file(GLOB HEADERS "*.h" )

if(PLATFORM_LOAD_RENDERDOC)
	add_definitions(-DPLATFORM_LOAD_RENDERDOC=1)
endif()
if(PLATFORM_LOAD_WINPIXGPUCAPTURER)
	add_definitions(-DPLATFORM_LOAD_WINPIXGPUCAPTURER=1)
endif()

if(PLATFORM_USE_ASSIMP)
	set(INCLUDE_DIRS "${SIMUL_PLATFORM_DIR}/External/assimp/include" "${CMAKE_BINARY_DIR}/External/assimp/include")
	set(ADDITIONAL_LIBS "")
else()
	set(INCLUDE_DIRS "")
	set(ADDITIONAL_LIBS "")
endif()

set(INCLUDE_DIRS ${INCLUDE_DIRS} "${SIMUL_PLATFORM_DIR}/External/stb")

set(PLATFORM_STD_CHARCONV ON)
if(XBOXONE)
	set(PLATFORM_STD_CHARCONV OFF)
elseif(PLATFORM_LINUX)
	set(PLATFORM_STD_CHARCONV OFF)
endif()
# Setup and build the static library.
add_static_library( SimulCrossPlatform SOURCES ${SOURCES} ${HEADERS}
	DEFINITIONS PLATFORM_LOAD_RENDERDOC=$<BOOL:${PLATFORM_LOAD_RENDERDOC}> PLATFORM_LOAD_WINPIXGPUCAPTURER=$<BOOL:${PLATFORM_LOAD_WINPIXGPUCAPTURER}> PLATFORM_USE_ASSIMP=$<BOOL:${PLATFORM_USE_ASSIMP}> PLATFORM_STD_CHARCONV=$<BOOL:${PLATFORM_STD_CHARCONV}>
	FOLDER ${SIMUL_PLATFORM_FOLDER_PREFIX} DEPENDENCIES ${ADDITIONAL_LIBS} INCLUDES ${INCLUDE_DIRS} )

# Setup and build the dynamic library.
add_dynamic_library(SimulCrossPlatform SOURCES ${SOURCES} ${HEADERS} 
	DEFINITIONS SIMUL_CROSSPLATFORM_DLL=1 PLATFORM_LOAD_RENDERDOC=$<BOOL:${PLATFORM_LOAD_RENDERDOC}> PLATFORM_LOAD_WINPIXGPUCAPTURER=$<BOOL:${PLATFORM_LOAD_WINPIXGPUCAPTURER}> PLATFORM_USE_ASSIMP=$<BOOL:${PLATFORM_USE_ASSIMP}> PLATFORM_STD_CHARCONV=$<BOOL:${PLATFORM_STD_CHARCONV}>
	LINK SimulMath_MD Core_MD FOLDER ${SIMUL_PLATFORM_FOLDER_PREFIX} LINK ${ADDITIONAL_LIBS} INCLUDES ${INCLUDE_DIRS})
	
if(PLATFORM_USE_ASSIMP)
	target_link_directories(SimulCrossPlatform_MD PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../External/assimp/build_mt/lib/${CMAKE_BUILD_TYPE} )
	target_link_libraries( SimulCrossPlatform_MD ${ASSIMP_LIBNAME} )
endif()