cmake_minimum_required(VERSION 3.5)

file(GLOB SOURCES "*.cpp" )

file(GLOB HEADERS "*.h" )
file(GLOB SHADERS  "Shaders/*.sfx") 
file(GLOB SHADER_INCLUDES "Shaders/*.sl") 

if(PLATFORM_LOAD_RENDERDOC)
	add_definitions(-DPLATFORM_LOAD_RENDERDOC=1)
endif()
if(PLATFORM_LOAD_WINPIXGPUCAPTURER)
	add_definitions(-DPLATFORM_LOAD_WINPIXGPUCAPTURER=1)
endif()

if(PLATFORM_USE_ASSIMP)
	set(INCLUDE_DIRS "${SIMUL_PLATFORM_DIR}/External/assimp/include" "${CMAKE_BINARY_DIR}/External/assimp/include"
					 "${SIMUL_PLATFORM_DIR}/External/assimp/build_mt/include" "${CMAKE_BINARY_DIR}/External/assimp/build_mt/include"
					 "${SIMUL_PLATFORM_DIR}/External/assimp/build_md/include" "${CMAKE_BINARY_DIR}/External/assimp/build_md/include")
	set(ADDITIONAL_LIBS "")
else()
	set(INCLUDE_DIRS "")
	set(ADDITIONAL_LIBS "")
endif()

if(PLATFORM_WINDOWS OR PLATFORM_LINUX)
	#set(ADDITIONAL_LIBS ${ADDITIONAL_LIBS} Sfx)
endif()
set(INCLUDE_DIRS ${INCLUDE_DIRS} "${SIMUL_PLATFORM_DIR}/External/stb")
 
set(PLATFORM_STD_CHARCONV ON)
if(XBOXONE)
	set(PLATFORM_STD_CHARCONV OFF)
elseif(PLATFORM_LINUX)
	set(PLATFORM_STD_CHARCONV OFF)
elseif(PLATFORM_EMSCRIPTEN)
	set(PLATFORM_STD_CHARCONV OFF)
endif()

if(PLATFORM_PS4)
	set(PLATFORM_STD_FILESYSTEM 0)
endif()

# whether to do the (slow) debugging of profiling levels - for finding mismatched Begin()/End() pairs.
option(PLATFORM_DEBUG_PROFILING_LEVELS "Whether to do the (slow) debugging of profiling levels - for finding mismatched Begin()/End() pairs." OFF)

# Setup and build the static library.
add_static_library( SimulCrossPlatform SOURCES ${SOURCES} ${HEADERS} ${SHADERS} ${SHADER_INCLUDES}
	DEFINITIONS PLATFORM_LOAD_RENDERDOC=$<BOOL:${PLATFORM_LOAD_RENDERDOC}> PLATFORM_LOAD_WINPIXGPUCAPTURER=$<BOOL:${PLATFORM_LOAD_WINPIXGPUCAPTURER}> PLATFORM_USE_ASSIMP=$<BOOL:${PLATFORM_USE_ASSIMP}> PLATFORM_STD_CHARCONV=$<BOOL:${PLATFORM_STD_CHARCONV}> PLATFORM_DEBUG_PROFILING_LEVELS=$<BOOL:${PLATFORM_DEBUG_PROFILING_LEVELS}>
	FOLDER ${SIMUL_PLATFORM_FOLDER_PREFIX} DEPENDENCIES ${ADDITIONAL_LIBS} INCLUDES ${INCLUDE_DIRS} )

add_multiplatform_sfx_shader_project( SimulCrossPlatform_MT INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/Shaders"
								"${SIMUL_PLATFORM_DIR}/.."
							SOURCES ${SHADERS} ${SHADER_INCLUDES} DEFINES VULKAN_SDK=${VULKAN_SDK_DIR}
					 		OUTPUT "${CMAKE_BINARY_DIR}/shaderbin/$PLATFORM_NAME" )
	
if(PLATFORM_BUILD_MD_LIBS)
	# Setup and build the dynamic library.
	add_dynamic_library(SimulCrossPlatform SOURCES ${SOURCES} ${HEADERS} 
		DEFINITIONS SIMUL_CROSSPLATFORM_DLL=1 PLATFORM_LOAD_RENDERDOC=$<BOOL:${PLATFORM_LOAD_RENDERDOC}> PLATFORM_LOAD_WINPIXGPUCAPTURER=$<BOOL:${PLATFORM_LOAD_WINPIXGPUCAPTURER}> PLATFORM_USE_ASSIMP=$<BOOL:${PLATFORM_USE_ASSIMP}> PLATFORM_STD_CHARCONV=$<BOOL:${PLATFORM_STD_CHARCONV}> PLATFORM_DEBUG_PROFILING_LEVELS=$<BOOL:${PLATFORM_DEBUG_PROFILING_LEVELS}>
		LINK SimulMath_MD Core_MD FOLDER ${SIMUL_PLATFORM_FOLDER_PREFIX} LINK ${ADDITIONAL_LIBS} INCLUDES ${INCLUDE_DIRS})
	
	if(PLATFORM_USE_ASSIMP)
		target_link_directories(SimulCrossPlatform_MD PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../External/assimp/build_mt/lib/${CMAKE_BUILD_TYPE} )
		target_link_libraries( SimulCrossPlatform_MD ${ASSIMP_LIBNAME} )
	endif()
endif()